@@ -26,6 +26,7 @@ Date: 2025-28-09
     - Added a lot of recipe tints to recipes that are in chem/acid plants.
     - Finally added the requester chest rework, which starts requester chests off at 1 slot and allows you to gain more slots via research (up to a max of 5 currently, but will increase over time)
     - Added acetone (better versions) of every recipe that used benzene in A-AATM.
+    - Added artillery damage research bonus.
 
   Changes:
     - Changed vanilla rocket fuel into Solid rocket fuel.
